k8s-alb/2048.yaml
#Creating New NameSpace
---
apiVersion: v1 
kind: Namespace
metadata:
  name: game-2048
---

#Creating deployment 

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - name: myapp
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: game-2048-service
spec:
  selector:
    app.kubernetes.io/name: app-2048
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort


#Ingress creation

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: game-2048
spec:
